style: fix a few alignment issues

--- a/sass/mm-theme/base/_footer.scss
+++ b/sass/mm-theme/base/_footer.scss
@@ -3,9 +3,12 @@
 --------------------------------------------------------------*/
 
 .footer {
+  font-family: Arial, Helvetica, sans-serif;
   width: 100%;
   font-size: 1.2rem;
-  @include margin-y(3rem);
+  margin-top: 1rem;
+  margin-bottom: 3rem;
+
   .container {
     @extend %flex-column;
     align-items: center;
@@ -26,7 +29,6 @@
   }
 
   &__copyright {
-    max-width: 50%;
     p {
       text-align: center;
     }
@@ -50,6 +52,7 @@
     }
 
     &__copyright {
+      max-width: 50%;
       #copyright-text {
         display: none;
       }
