--- a/sass/mm-theme/base/_scaffolding.scss
+++ b/sass/mm-theme/base/_scaffolding.scss
@@ -8,14 +8,6 @@ body {
   flex-direction: column;
 }
 
-.site {
-  display: contents;
-}
-
-.site-content {
-  flex: 1;
-}
-
 section {
   display: flex;
   flex-direction: column;
