--- a/sass/mm-theme/base/_typography.scss
+++ b/sass/mm-theme/base/_typography.scss
@@ -83,6 +83,6 @@ a {
 
 body {
   min-height: 100%;
-  font-family: "proxima-nova", sans-serif, "HelveticaNeue", "Helvetica Neue",
+  font-family: Georgia, serif, sans-serif, "HelveticaNeue", "Helvetica Neue",
     Helvetica, Arial;
 }
